--- a/templates/todo.handlebars
+++ b/templates/todo.handlebars
@@ -1,5 +1,5 @@
 <div class="title">
   <input type="checkbox">
   {{title}}
-  <button class="delete">Delete</button>
+  <button class="destroy">Delete</button>
 </div>
